2003-10-14  Alexandre Pigolkine <pigolkine@gmx.de>
	* Graphics.cs
	* gdipFunctioncs.cs		
	* gdipStructs.cs		DrawString function added

2003-10-12  Alexandre Pigolkine <pigolkine@gmx.de>
	* gdipEnums.cs 
	* gdipFunctions.cs 
	* gdipStructs.cs		added 
						

2003-10-12  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* Brush.cs
	* Font.cs
	* FontFamily.cs
	* Graphics.cs
	* Image.cs
	* Pen.cs
	* SolidBrush.cs
						implementation changed to gdi+

2003-09-08  Duncan Mak  <duncan@ximian.com>

	* Factories.cs (DefaultImplementationNamespace): Change it from
	"XrImpl" to "Cairo".

2003-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Color.cs: fixed FromArgb to handle alpha value correctly. Closes
	bug #47727.

2003-08-08  Duncan Mak  <duncan@ximian.com>

	* Graphics.cs (DrawBezier): Fixed.

2003-08-03  Alexandre Pigolkine <pigolkine@gmx.de>
	* Graphics.cs  delegate Dispose to implementation

2003-08-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FontConverter.cs: stub it out so that system.web compiles.

2003-07-30 Alexandre Pigolkine <pigolkine@gmx.de>
	* Image.cs	InternalImageInfo class improved

2003-07-23  Miguel de Icaza  <miguel@ximian.com>

	* Factories.cs: If the AppDomain key `Mono.Running.Windows.Forms'
	is set, default to Win32Impl 

2003-07-22 Alexandre Pigolkine <pigolkine@gmx.de>
	* Image.cs	implementation added
	
2003-07-21  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Icon.cs: Stubed out (fix for System.Drawing.Design)

2003-07-17  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* StringFormat.cs: Changes to become CLS-compliant

2003-07-14  Miguel de Icaza  <miguel@ximian.com>

	* Factories.cs: Remove debugging message.

2003-07-01 Alexandre Pigolkine <pigolkine@gmx.de>
	* Color.cs	code generation program modified

2003-06-29 Alexandre Pigolkine
	* Graphics.cs	image drawing

2003-06-28 Alexandre Pigolkine <pigolkine@gmx.de>
	* Color.cs			
	* SystemColors.cs	
		supply KnowColor enum value to save Enum.Parse at runtime
